--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,12 @@
 {% extends './layout.html' %}
 {% block main %}
 <h1>Welcome to Acme Categories!</h1>
+
+<form method="POST" action='/categories'>
+	<div class="form-group">
+		<label>Category Name</label>
+		<input name="name" class="form-control" />
+	</div>
+	<button class="btn btn-primary">Save Category</button>
+</form>
 {% endblock %}
